@@ -523,6 +523,18 @@ genxDeclareAttribute( w, ... )
         XSRETURN_UNDEF;
     }
 
+SV *
+genxScrubText( w, in )
+    XML_Genx w
+    SV *in
+  CODE:
+    RETVAL = newSVsv( in );
+    (void)genxScrubText( w, SvPV_nolen( in ), SvPV_nolen( RETVAL ) );
+    /* Fix up the new length. */
+    SvCUR_set( RETVAL, strlen( SvPV_nolen( RETVAL ) ) );
+  OUTPUT:
+    RETVAL
+
 MODULE = XML::Genx	PACKAGE = XML::Genx::Namespace	PREFIX=genx
 
 utf8
